tests/ui/printdoc-no-display.stderr
error[E0277]: `NoDisplay` doesn't implement `std::fmt::Display`
 --> tests/ui/printdoc-no-display.rs:6:21
  |
6 |     printdoc!("{}", NoDisplay);
  |                --   ^^^^^^^^^ `NoDisplay` cannot be formatted with the default formatter
  |                |
  |                required by this formatting parameter
  |
help: the trait `std::fmt::Display` is not implemented for `NoDisplay`
 --> tests/ui/printdoc-no-display.rs:3:1
  |
3 | struct NoDisplay;
  | ^^^^^^^^^^^^^^^^
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `printdoc` (in Nightly builds, run with -Z macro-backtrace for more info)
